prittier and eslint setup

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "devDependencies": {
     "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^5.1.4",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "prettier": "3.3.3",
     "typescript": "~5.6.2",
     "vite": "^5.4.9",
     "vite-plugin-vuetify": "^2.0.4",
