--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   },
   "dependencies": {
     "pinia": "^2.2.5",
-    "uniqid": "^5.4.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
+    "vue-uuid": "^3.0.0",
     "vuetify": "^3.7.3"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
-    "@types/uniqid": "^5.3.4",
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
