--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-uuid": "^3.0.0",
+    "vue3-toastify": "^0.2.5",
     "vuetify": "^3.7.3"
   },
   "devDependencies": {
